--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongoose": "^7.6.3",
     "nodemon": "^3.0.1",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.17.0"
