--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "mongoose": "^7.6.3",
     "nodemon": "^3.0.1",
     "react-icons": "^4.11.0",
-    "react-router-dom": "^6.17.0"
+    "react-router-dom": "^6.17.0",
+    "redux-persist": "^6.0.0"
   },
   "name": "mern-estate",
   "version": "1.0.0",
